plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
    id 'org.graalvm.buildtools.native' version '0.9.28'
    // id 'jacoco'
}

group = 'com.w3canvas'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
        vendor = JvmVendorSpec.GRAAL_VM
    }
}

javafx {
    version = "17.0.13"  // Match Java 17 toolchain
    modules = [ 'javafx.controls', 'javafx.graphics', 'javafx.base', 'javafx.media', 'javafx.swing' ]
}

application {
    mainClass = 'com.w3canvas.javacanvas.Main'
}

dependencies {
    // Rhino
    implementation 'org.mozilla:rhino:1.7.14'

    // GraalJS - using community edition with JS language support
    implementation 'org.graalvm.polyglot:polyglot:24.1.0'
    implementation 'org.graalvm.polyglot:js-community:24.1.0'

    // Testing
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'

    testImplementation 'org.testfx:testfx-core:4.0.18'
    testImplementation 'org.testfx:testfx-junit5:4.0.18'
    testRuntimeOnly 'org.testfx:openjfx-monocle:17.0.10'  // Match Java 17

    testImplementation 'org.mockito:mockito-core:5.18.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.18.0'

    testImplementation 'org.hamcrest:hamcrest:2.2'

    testImplementation 'org.nanohttpd:nanohttpd:2.3.1'
}

test {
    useJUnitPlatform()

    // Headless testing configuration (matches pom.xml)
    systemProperty 'java.awt.headless', 'true'
    systemProperty 'testfx.robot', 'glass'
    systemProperty 'testfx.headless', 'true'
    systemProperty 'prism.order', 'sw'
    systemProperty 'prism.text', 't2k'
    // Additional Prism settings for consistent headless rendering
    systemProperty 'prism.allowhidpi', 'false'
    systemProperty 'prism.subpixeltext', 'false'
    systemProperty 'prism.lcdtext', 'false'
    systemProperty 'prism.fontsmoothing', 'false'
    systemProperty 'prism.forceGPU', 'false'
    systemProperty 'prism.vsync', 'false'
}

graalvmNative {
    binaries {
        main {
            imageName = 'javacanvas'
            mainClass = 'com.w3canvas.javacanvas.Main'
            buildArgs.add('--no-fallback')
            buildArgs.add('--allow-incomplete-classpath')
            buildArgs.add('--initialize-at-build-time=com.w3canvas.javacanvas')
            buildArgs.add('-H:+ReportExceptionStackTraces')
        }
    }
}
